--- a/thenewbostonTutorial/music/templates/music/index.html
+++ b/thenewbostonTutorial/music/templates/music/index.html
@@ -1,52 +1,14 @@
-{% load staticfiles %}
-<link href="{% static 'music/style.css' %}" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+{% extends 'music/base.html' %}
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-
-    <!-- Logo -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{% url 'music:index' %}">Viberr</a>
-    </div>
-
-    <!-- Navigation Items -->
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-
-        <li class="active">
-          <a href="{% url 'music:index' %}">
-            <span class="glyphicon glyphicon-cd" aria-hidden="true"></span>&nbsp; Albums
-          </a>
-        </li>
-
-        <li class="">
-          <a href="#">
-            <span class="glyphicon glyphicon-music" aria-hidden="true"></span>&nbsp; Songs
-          </a>
-        </li>
-
-      </ul>
-    </div>
-
-  </div>
-</nav>
-
-{% if all_albums %}
-  <h1>LIST OF ALL ALBUMS:</h1>
-  <ul>
-    {% for album in all_albums %}
-    <li><h4><a href="{% url 'music:detail' album.id %}">{{ album.album_title}}</a></h4></li>
-    {% endfor %}
-  </ul>
-{% else %}
-  <h2>No Albums Found</h2>
-{% endif %}
+{% block body %}
+  {% if all_albums %}
+    <h1>LIST OF ALL ALBUMS:</h1>
+    <ul>
+      {% for album in all_albums %}
+      <li><h4><a href="{% url 'music:detail' album.id %}">{{ album.album_title}}</a></h4></li>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <h2>No Albums Found</h2>
+  {% endif %}
+{% endblock %}
